# dacit

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose-production.yml  docker-compose-testing.yml  docker-compose.yml  openapi.yaml  web-api-nginx.conf
api/: Dockerfile  Dockerfile.dev  docker-entrypoint.sh  pyproject.toml
api/dacit_api/: .env_example  manage.py
api/dacit_api/api/: models.py  urls.py  views.py
api/dacit_api/core/: asgi.py  settings.py  urls.py  wsgi.py
api/dacit_api/dacit_api/: asgi.py  settings.py  urls.py  wsgi.py
api/dacit_api/dacit_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/dacit_api/dacit_app/migrations/: 0001_initial.py  0002_alter_dacituser_public_id.py  0002_alter_text_stimulus_wc_picture_url.py  0002_customuser_is_active_customuser_is_superuser.py  0002_dacituser_username.py  0002_rename_created_user_date_joined_remove_user_name_and_more.py  0003_alter_dacituser_public_id.py  0003_alter_text_stimulus_wc_picture_url.py  0003_alter_user_options_alter_user_managers_user_groups_and_more.py  0004_alter_user_options_alter_user_managers_and_more.py  0004_audio_text_stimulus.py  0004_dacituser_active_dicalect_dacituser_active_language_and_more.py  0004_speaker_dis_sent_min_pair_sent.py  0005_alter_min_pair_sent_answer_equal_and_more.py  0005_alter_speaker_ci_user.py  0006_text_stimulus_sent.py  (+1 more)
api/dacit_api/import/: B_W_MIN_PAARE.csv  F_W_MIN_PAARE.csv  KONSONANTEN_EINZELN.csv  PF_F_MIN_PAARE.csv  VOKALE_EINZELN.csv  VOKAL_KONSONANT_SILBE.csv  WORTLISTE_IMPORTIERT.csv
(+65 files in other folders)
